# PyChe

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: INSTALL.md  TUTORIALS.md
examples/: diagnostic_plots.ipynb  mpi_cython_benchmark.ipynb
src/pyche/: __init__.py  __main__.py  _cyengine.pyx  _cyinterp.pyx  _mpiexec_bridge.py  cache_validation.py  canonical_tables.py  config.py  constants.py  diagnostics.py  driver.py  engine.py  engine_core.py  engine_jax.py  engine_jax_full.py  engine_mpi.py  engine_serial.py  imf_mass_bins.py  interpolation.py  interpolation_api.py  interpolation_compat.py  io_routines.py  main.py  model_tables.py  output_io.py  output_reader.py  plotting.py  run_helpers.py  state.py  tau.py
src/pyche/backends/: __init__.py  base.py  cython_backend.py  factory.py  jax_backend.py  numba_backend.py  numpy_backend.py
src/pyche/data/DATI/: WW95aMD.csv  WW95bMD.csv  WW95cMD.csv  WW95dMD.csv  WW95e.csv
tests/: test_jax_backend.py  test_jax_full_backend.py
